--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "menunextjs",
+  "name": "menu-nextedit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.282.0",
-    "crypto": "^1.0.1",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@next/font": "13.2.3",
+    "framer-motion": "^10.2.3",
     "mongoose": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
 }
