--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@next/font": "13.2.3",
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "framer-motion": "^10.2.3",
     "mongoose": "^7.0.1",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
