--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@next/font": "13.2.3",
     "@reduxjs/toolkit": "^1.9.3",
+    "@vercel/node": "^2.9.13",
     "axios": "^1.3.4",
     "framer-motion": "^10.2.3",
     "mongoose": "^7.0.1",
