--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@vercel/node": "^2.9.13",
     "axios": "^1.3.4",
+    "cloudinary": "^1.35.0",
+    "dotenv": "^16.0.3",
     "framer-motion": "^10.2.3",
     "mongoose": "^7.0.1",
     "next": "13.2.3",
