--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
     "framer-motion": "^10.2.3",
     "mongoose": "^7.0.1",
     "next": "13.2.3",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.0.0"
   }
 }
